# AIBioSkills

./: .gitignore  CLAUDE.md  EXAMPLES.md  INSTALLATION.md  PROJECT_INVENTORY.md  README.md  ROADMAP.md  claude_desktop_config.example.json  pyproject.toml  test_server.py
.claude/commands/: clinical-variant-agent.md  comparative-genomics-agent.md  drug-target-report.md  gene-list-agent.md  gene-report.md  lab-notebook.md  literature-agent.md  pathway-report.md  project-summary.md  protein-report.md  statistical-methods-agent.md  structure-agent.md  variant-report.md
.opencode/: opencode.json
.opencode/skills/clinical-variant-agent/: SKILL.md
.opencode/skills/comparative-genomics-agent/: SKILL.md
.opencode/skills/drug-target-report/: SKILL.md
.opencode/skills/gene-list-agent/: SKILL.md
.opencode/skills/gene-report/: SKILL.md
.opencode/skills/lab-notebook/: SKILL.md
docs/: index.html
docs/css/: dark-theme.css  style.css
docs/databases/: alphafold.html  disease-ontology.html  encode.html  ensembl.html  expression-atlas.html  gnomad.html  gtex.html  hpo.html  interpro.html  kegg.html  ncbi-blast.html  ncbi-clinvar.html  ncbi-cosmic.html  ncbi-datasets.html  ncbi-gene-links.html  ncbi-omim.html  ncbi-pubmed.html  pharmgkb.html  pmc.html  rcsb-pdb.html  reactome.html  semantic-scholar.html  string.html  uniprot.html
docs/tools/: biopython.html  clinical.html  ensembl.html  genomics.html  literature.html  ncbi-datasets.html  structure.html  uniprot.html
scripts/: lab_notebook_logger.py
src/datasets_mcp/: server.py
(+7 files in other folders)
